# cora

./: .env.example  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  CITATION.cff  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  mkdocs.yml
apps/api/: README.md  openapi.json  pyproject.toml  tach.toml
apps/api/src/cora/: __init__.py
apps/api/tests/: _authz.py  _postgres.py  _strategies.py  conftest.py
apps/api/tests/architecture/: conftest.py  test_actor_events_carry_no_pii.py  test_actor_kind_sync.py  test_advice_audit_parity.py  test_agent_kind_doer_form.py  test_agent_subscribers_completeness.py  test_ancestor_walk_depth_cap_constant.py  test_asset_evolver_lifecycle_dates_carry_forward.py  test_asset_level_upper_tier_deprecated.py  test_asset_lookup_ancestors_walk_lives_in_equipment_adapter.py  test_asset_lookup_port_arm_signature_pin.py  test_asset_lookup_result_walk_axis_fields.py  test_asset_owner_invariants.py  test_auth_principal_kind_sync.py  test_bounded_contexts_match_bc_directory.py  test_bounded_name_decorator_usage.py  test_canonical_json_bytes_single_source.py  test_canonicalization_v1_immutability.py  test_caution_invariants_module.py  test_clearance_template_seed_idempotency.py  test_conduct_until_advised_wire_guards.py  test_conduct_until_converged_byte_snapshot.py  test_conductor_step_kinds_match_procedure.py  test_cross_bc_atomic_write_rationale.py  test_cross_bc_refs_facility_code_not_id.py  test_cross_slice_independence.py  test_decide_port_purity.py  test_decider_changes_require_paired_pbt.py  test_decider_docstring_invariants_block.py  test_decider_purity.py  test_decider_signature_canonical.py  test_domain_dataclasses_are_frozen.py  test_domain_errors_in_state_module.py  test_edge_auth_invariants.py  test_enclosure_zero_severity_scalars.py  test_envelope_principal_id.py  test_equipment_aggregate_shape.py  test_equipment_error_classes_have_producers.py  test_error_handler_registration_scope.py  test_event_class_defined_vs_registered.py  (+79 more)
apps/api/tests/contract/: _compute_helpers.py  _helpers.py  _mcp_helpers.py  _subject_helpers.py  test_abandon_campaign_endpoint.py  test_abandon_campaign_mcp_tool.py  test_abort_credential_rotation_endpoint.py  test_abort_credential_rotation_mcp_tool.py  test_abort_procedure_endpoint.py  test_abort_procedure_mcp_tool.py  test_abort_run_endpoint.py  test_abort_run_mcp_tool.py  test_activate_asset_endpoint.py  test_activate_asset_mcp_tool.py  test_activate_clearance_template_endpoint.py  test_activate_clearance_template_mcp_tool.py  test_activate_permit_endpoint.py  test_activate_permit_mcp_tool.py  test_actors_endpoint.py  test_add_assembly_presents_as_endpoint.py  test_add_assembly_presents_as_mcp_tool.py  test_add_asset_alternate_identifier_endpoint.py  test_add_asset_alternate_identifier_mcp_tool.py  test_add_asset_capability_endpoint.py  test_add_asset_capability_mcp_tool.py  test_add_asset_family_endpoint.py  test_add_asset_family_mcp_tool.py  test_add_asset_owner_endpoint.py  test_add_asset_owner_mcp_tool.py  test_add_asset_port_mcp_tool.py  test_add_dataset_to_edition_endpoint.py  test_add_dataset_to_edition_mcp_tool.py  test_add_family_presents_as_endpoint.py  test_add_family_presents_as_mcp_tool.py  test_add_method_required_role_endpoint.py  test_add_method_required_role_endpoint_role_kind.py  test_add_method_required_role_mcp_tool.py  test_add_model_family_endpoint.py  test_add_model_family_mcp_tool.py  test_add_plan_wire_endpoint.py  (+496 more)
apps/api/tests/e2e/: conftest.py  test_404_unknown_id.py  test_actor_lifecycle.py  test_capability_and_asset.py  test_family_and_asset.py  test_health.py  test_idempotency_replay.py  test_method_lifecycle.py  test_run_lifecycle.py  test_subject_mount_cycle.py
apps/api/tests/integration/: _caproto_ioc.py  _equipment_helpers.py  _facility_fixture.py  _helpers.py  _softioc.py  conftest.py  test_35bm_beta_alignment_center_scenario.py  test_35bm_beta_alignment_focus_scenario.py  test_35bm_beta_alignment_pitch_scenario.py  test_35bm_beta_alignment_resolution_scenario.py  test_35bm_beta_alignment_roll_scenario.py  test_35bm_commissioning_dark_baseline_scenario.py  test_35bm_commissioning_first_light_scenario.py  test_35bm_commissioning_flat_baseline_scenario.py  test_35bm_rotation_axis_alignment_pilot.py  test_35bm_shakedown_motor_homing_scenario.py  test_acquisitions_against_softioc_postgres.py  test_activate_asset_handler_postgres.py  test_actuation_kind_gate_against_softioc_postgres.py  test_add_assembly_presents_as_handler_postgres.py  test_add_asset_alternate_identifier_handler_postgres.py  test_add_asset_capability_handler_postgres.py  test_add_asset_family_handler_postgres.py  test_add_asset_owner_handler_postgres.py  test_add_family_presents_as_handler_postgres.py  test_add_method_required_role_handler_postgres.py  test_add_model_family_handler_postgres.py  test_add_run_to_campaign_postgres.py  test_adjust_run_postgres.py  test_agent_lifecycle_iter2_postgres.py  test_amend_clearance_atomic_postgres.py  test_append_activities_handler_postgres.py  test_append_inferences_handler_postgres.py  test_append_observations_handler_postgres.py  test_append_procedure_step_handler_postgres.py  test_append_procedure_steps_handler_postgres.py  test_append_reasoning_entries_handler_postgres.py  test_append_reasoning_entry_handler_postgres.py  test_append_run_reading_handler_postgres.py  test_append_run_readings_handler_postgres.py  (+228 more)
apps/api/tests/unit/: _helpers.py  test_actuation_kind_gate_seam.py  test_channel.py  test_deps.py  test_event_envelope.py  test_event_store_principal_id_inmemory.py  test_event_store_property.py  test_idempotency_decorator.py  test_idempotency_pruner.py  test_idp_registry.py  test_in_memory_event_store.py  test_in_memory_event_store_append_streams.py  test_in_memory_idempotency.py  test_in_memory_idempotency_store.py  test_introspection_verifier.py  test_json_merge_patch.py  test_json_schema_subset.py  test_json_schema_validation.py  test_jwt_verifier.py  test_list_query_no_smart_logic.py  test_logbook.py  test_memory_event_store.py  (+6 more)
(+4779 files in other folders)
