[project]
name = "cora"
version = "0.1.0"
description = "Continuously Overpromised, Rarely Automated — research facility operations platform"
readme = "README.md"
requires-python = ">=3.13"
authors = [{ name = "Doga Gursoy" }]
license = { text = "Apache-2.0" }

dependencies = [
    "fastapi>=0.136.1,<0.137",
    "asyncpg>=0.31.0,<0.32",
    "pydantic>=2.13.4,<3",
    "pydantic-settings>=2.14.1,<3",
    "mcp>=1.27.1,<2",
    "uvicorn[standard]>=0.46.0",
    "structlog>=25.0.0",
    "uuid-utils>=0.15.0",
    "prometheus-client>=0.21.0,<1",
    "prometheus-fastapi-instrumentator>=7.0.0,<8",
    # OpenTelemetry: api/sdk are 1.x stable; instrumentations and semconv
    # ship as 0.x companions on the same release cadence (0.62b1 ↔ 1.41.1
    # at time of pin). Pin api/sdk to <2 (next major would be breaking);
    # pin instrumentations to <0.63 (next minor may be breaking on 0.x).
    # Bump them in lockstep.
    "opentelemetry-api>=1.41,<2",
    "opentelemetry-sdk>=1.41,<2",
    "opentelemetry-semantic-conventions>=0.62b1,<0.63",
    "opentelemetry-instrumentation-fastapi>=0.62b1,<0.63",
    "opentelemetry-instrumentation-asyncpg>=0.62b1,<0.63",
    "opentelemetry-exporter-otlp-proto-http>=1.41,<2",
    "jsonschema-rs>=0.20,<1",
    # Anthropic SDK (Phase 8f-b iter 2a): used by `AnthropicLLMAdapter`,
    # the production implementor of `cora.infrastructure.ports.LLMPort`.
    # No other code imports this; subscribers + tests use the port +
    # `FakeLLMAdapter`. Pin <1 to flag a future major SDK shift in CI
    # before it lands silently.
    "anthropic>=0.79.0,<1",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3,<10",
    "pytest-asyncio>=1.3.0,<2",
    "pytest-cov>=7.1.0,<8",
    "coverage[toml]>=7.14.0,<8",
    "diff-cover>=9.5.0,<10",
    "ruff>=0.15.12,<0.16",
    "pyright>=1.1.409,<2",
    "httpx>=0.28.0",
    "asgi-lifespan>=2.1.0,<3",
    "pre-commit>=4.0.0,<5",
    "testcontainers[postgres]>=4.14.2,<5",
    "tach>=0.35.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cora"]

[tool.ruff]
line-length = 100
target-version = "py313"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "W",    # pycodestyle warnings
    "I",    # isort
    "B",    # flake8-bugbear
    "UP",   # pyupgrade
    "RUF",  # ruff-specific
    "SIM",  # flake8-simplify
    "TC",   # flake8-type-checking
    "N",    # pep8-naming
    "ASYNC",
]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint.isort]
# `tests` is a first-party namespace too — without this, ruff groups
# `from tests.contract._mcp_helpers import ...` with third-party libs
# rather than with `from cora.* import ...`.
known-first-party = ["cora", "tests"]

[tool.pyright]
include = ["src", "tests"]
pythonVersion = "3.13"
typeCheckingMode = "strict"
useLibraryCodeForTypes = true
reportMissingTypeStubs = false

[tool.pytest.ini_options]
addopts = ["--import-mode=importlib", "--strict-markers"]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "unit: pure tests with no I/O",
    "architecture: structural fitness functions (AST/filesystem/SQL-text checks); no I/O",
    "integration: tests requiring Postgres or other external services",
    "contract: REST/MCP schema verification tests",
    "e2e: full end-to-end tests",
]

# Coverage configuration. Default trace core (NOT sys.monitoring) until
# Python 3.14 lands and the FastAPI+asyncpg async-miss-line bugs close
# (coveragepy#1240, #1082). Branch coverage on per modern best practice.
# Switch `parallel = true` if pytest-xdist is adopted.
[tool.coverage.run]
branch = true
source = ["src/cora"]
# Required by py-cov-action/python-coverage-comment-action: the action
# runs from repo root while pytest runs from apps/api, so absolute paths
# in .coverage become unresolvable. Relative paths also make .coverage
# files portable across the dev/CI/container split.
relative_files = true
omit = [
    "*/tests/*",
    "*/conftest.py",
    "*/__main__.py",
]

[tool.coverage.report]
show_missing = true
skip_covered = false
precision = 1
# `exclude_also` preserves the default `pragma: no cover` plus these
# AST-shape-level exclusions. `exclude_lines` would replace the defaults.
exclude_also = [
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "@(abc\\.)?abstractmethod",
    "\\.\\.\\.",
    "if __name__ == .__main__.:",
]
# Soft floor; ratchet up over time. Diff coverage (changed lines only)
# is the hard gate via diff-cover in CI; total coverage is informational.
fail_under = 80

[tool.coverage.html]
directory = "htmlcov"

[tool.coverage.xml]
output = "coverage.xml"
