[project]
name = "cora"
version = "0.1.0"
description = "Continuously Overpromised, Rarely Automated — research facility operations platform"
readme = "README.md"
requires-python = ">=3.13"
authors = [{ name = "Doga Gursoy" }]
license = { text = "Apache-2.0" }

dependencies = [
    "fastapi>=0.136.1,<0.137",
    "asyncpg>=0.31.0,<0.32",
    "pydantic>=2.13.4,<3",
    "pydantic-settings>=2.14.1,<3",
    "mcp>=1.27.1,<2",
    "uvicorn[standard]>=0.46.0",
    "structlog>=25.0.0",
    "uuid-utils>=0.15.0",
    "prometheus-client>=0.21.0,<1",
    "prometheus-fastapi-instrumentator>=7.0.0,<8",
    # OpenTelemetry: api/sdk are 1.x stable; instrumentations and semconv
    # ship as 0.x companions on the same release cadence (0.62b1 ↔ 1.41.1
    # at time of pin). Pin api/sdk to <2 (next major would be breaking);
    # pin instrumentations to <0.63 (next minor may be breaking on 0.x).
    # Bump them in lockstep.
    "opentelemetry-api>=1.41,<2",
    "opentelemetry-sdk>=1.41,<2",
    "opentelemetry-semantic-conventions>=0.62b1,<0.63",
    "opentelemetry-instrumentation-fastapi>=0.62b1,<0.63",
    "opentelemetry-instrumentation-asyncpg>=0.62b1,<0.63",
    "opentelemetry-exporter-otlp-proto-http>=1.41,<2",
    "jsonschema-rs>=0.20,<1",
    # Anthropic SDK (Phase 8f-b iter 2a): used by `AnthropicLLMAdapter`,
    # the production implementor of `cora.infrastructure.ports.LLM`.
    # No other code imports this; subscribers + tests use the port +
    # `FakeLLMAdapter`. Pin <1 to flag a future major SDK shift in CI
    # before it lands silently.
    "anthropic>=0.79.0,<1",
    # PyJWT (Phase C Iter A): the one library dependency for the edge-auth
    # JWT path — used by `JWTVerifier` for `Authorization: Bearer <JWT>`
    # signature verification + JWKS rotation. `[crypto]` extra pulls in
    # `cryptography` for RS256/ES256 (every real-world IdP uses one of
    # these). Per the Phase C design lock library-vs-DIY decision: PyJWT
    # is the one library we don't roll ourselves; everything else
    # (introspection adapter, registry, middleware) is hand-written.
    "pyjwt[crypto]>=2.10.0,<3",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3,<10",
    "pytest-asyncio>=1.3.0,<2",
    "pytest-cov>=7.1.0,<8",
    "coverage[toml]>=7.14.0,<8",
    "diff-cover>=9.5.0,<10",
    "ruff>=0.15.12,<0.16",
    "pyright>=1.1.409,<2",
    "httpx>=0.28.0",
    "asgi-lifespan>=2.1.0,<3",
    "pre-commit>=4.0.0,<5",
    "testcontainers[postgres]>=4.14.2,<5",
    "tach>=0.35.0",
    # pytest-xdist 3.7.0 (2025-05-26) made `--dist=worksteal` atomic and
    # group/scope-aware; 3.8.0 (2025-06-30) added the `loadscope-reorder`
    # toggle. The `worksteal` scheduler is the modern default for mixed-
    # duration suites (50ms unit + 200ms+ integration). One Postgres
    # container per worker (via session-scoped fixture, see tests/conftest)
    # sidesteps testcontainers-python#567 contention.
    "pytest-xdist>=3.8.0,<4",
    # pytest-httpserver (Phase C Iter A): spins up an in-process Werkzeug
    # HTTP server per-test; used to serve fake JWKS endpoints + IdP
    # introspection endpoints in `tests/unit/test_jwt_verifier.py` and
    # `tests/unit/test_introspection_verifier.py`. Why a real HTTP server
    # (not a httpx mock): PyJWKClient under the hood does its own HTTP
    # fetch; exercising the full path catches more (kid-miss refetch,
    # connection handling, etc) than mock-the-network. ~150ms startup
    # cost per test class; acceptable for the ~30 Iter A unit tests.
    "pytest-httpserver>=1.1.0,<2",
    # Per-test timeout enforcement. Without this, a single hung test
    # (e.g. an asyncpg call waiting on a connection that's never
    # returned, a deadlocked container, an unawaited future) stalls the
    # entire xdist session indefinitely — workers report nothing back
    # and the controller waits forever. `thread` method dumps a
    # traceback from the hung test before killing it, so the failure
    # output points to the line responsible.
    "pytest-timeout>=2.4.0,<3",
    # Hypothesis: property-based testing (Iter C of testing-techniques rollout).
    # Used for value-object invariants today; planned to extend to per-command
    # deciders in Iter D (PBT on Access BC). A `ci` profile is registered in
    # tests/conftest.py and auto-activates on CI=true to derandomize the seed
    # and disable the local example database, sidestepping xdist seed
    # collisions across worker processes.
    "hypothesis>=6.130,<7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cora"]

[tool.ruff]
line-length = 100
target-version = "py313"
src = ["src", "tests"]
# Parked directories are work-in-progress slices the user explicitly
# shelved (suffix `.parked`); mirrors the same exclusion in [tool.pyright].
extend-exclude = ["**/*.parked"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "W",    # pycodestyle warnings
    "I",    # isort
    "B",    # flake8-bugbear
    "UP",   # pyupgrade
    "RUF",  # ruff-specific
    "SIM",  # flake8-simplify
    "TC",   # flake8-type-checking
    "N",    # pep8-naming
    "ASYNC",
]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint.isort]
# `tests` is a first-party namespace too — without this, ruff groups
# `from tests.contract._mcp_helpers import ...` with third-party libs
# rather than with `from cora.* import ...`.
known-first-party = ["cora", "tests"]

[tool.pyright]
include = ["src", "tests"]
# Parked directories are work-in-progress slices the user explicitly
# shelved (suffix `.parked`); they shouldn't block type-check on the
# active codebase. Same convention applies to ruff (below).
exclude = ["**/__pycache__", "**/*.parked"]
pythonVersion = "3.13"
typeCheckingMode = "strict"
useLibraryCodeForTypes = true
reportMissingTypeStubs = false

[tool.pytest.ini_options]
addopts = ["--import-mode=importlib", "--strict-markers"]
testpaths = ["tests"]
asyncio_mode = "auto"
# Hard upper bound per test. Most unit/architecture tests are <100ms;
# integration tests with testcontainers stay well under 30s because the
# Postgres container is session-scoped (one per xdist worker), so per-
# test cost is just a transaction + a few queries. 60s is a generous
# safety net that still catches genuine hangs in minutes rather than
# the 50+ minutes we saw with no timeout. Use `@pytest.mark.timeout(N)`
# to override for known-slow tests (none today).
#
# `thread` method spawns a watchdog thread that dumps tracebacks of
# all threads in the worker process before raising — survives asyncio
# event loops, doesn't rely on SIGALRM (which signal-based timeouts
# need and which interacts poorly with asyncpg + uvloop). Works per-
# worker under xdist.
timeout = 60
timeout_method = "thread"
markers = [
    "unit: pure tests with no I/O",
    "architecture: structural fitness functions (AST/filesystem/SQL-text checks); no I/O",
    "integration: tests requiring Postgres or other external services",
    "contract: REST/MCP schema verification tests",
    "e2e: full end-to-end tests",
]

# Coverage configuration. Default trace core (NOT sys.monitoring): on
# Python 3.13 coverage.py silently falls back to ctrace when branch
# coverage or mixed thread/greenlet concurrency is on (both apply here);
# coveragepy#2172 (2026-05) reports sysmon is also slower than ctrace on
# 3.14 in real suites. Revisit only after CORA moves to 3.14 AND
# coveragepy#2150 lands sysmon+branch support. `parallel = true`
# required for pytest-xdist: each worker writes a suffixed `.coverage.*`
# file that pytest-cov combines at session end.
[tool.coverage.run]
branch = true
parallel = true
source = ["src/cora"]
# Required by py-cov-action/python-coverage-comment-action: the action
# runs from repo root while pytest runs from apps/api, so absolute paths
# in .coverage become unresolvable. Relative paths also make .coverage
# files portable across the dev/CI/container split.
relative_files = true
omit = [
    "*/tests/*",
    "*/conftest.py",
    "*/__main__.py",
]

[tool.coverage.report]
show_missing = true
skip_covered = false
precision = 1
# `exclude_also` preserves the default `pragma: no cover` plus these
# AST-shape-level exclusions. `exclude_lines` would replace the defaults.
exclude_also = [
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "@(abc\\.)?abstractmethod",
    "\\.\\.\\.",
    "if __name__ == .__main__.:",
]
# Soft floor; ratchet up over time. Diff coverage (changed lines only)
# is the hard gate via diff-cover in CI; total coverage is informational.
fail_under = 80

[tool.coverage.html]
directory = "htmlcov"

[tool.coverage.xml]
output = "coverage.xml"
