[project]
name = "cora"
version = "0.1.0"
description = "Continuously Overpromised, Rarely Automated — research facility operations platform"
readme = "README.md"
requires-python = ">=3.13"
authors = [{ name = "Doga Gursoy" }]
license = { text = "Apache-2.0" }

dependencies = [
    "fastapi>=0.136.3,<0.137",
    "asyncpg>=0.31.0,<0.32",
    "pydantic>=2.13.4,<3",
    "pydantic-settings>=2.14.1,<3",
    "mcp>=1.27.2,<2",
    "uvicorn[standard]>=0.49.0",
    "structlog>=26.1.0",
    "uuid-utils>=0.16.0",
    "prometheus-client>=0.21.0,<1",
    "prometheus-fastapi-instrumentator>=7.0.0,<8",
    # OpenTelemetry: api/sdk are 1.x stable; instrumentations and semconv
    # ship as 0.x companions on the same release cadence (0.62b1 ↔ 1.41.1
    # at time of pin). Pin api/sdk to <2 (next major would be breaking);
    # pin instrumentations to <0.63 (next minor may be breaking on 0.x).
    # Bump them in lockstep.
    "opentelemetry-api>=1.41,<2",
    "opentelemetry-sdk>=1.41,<2",
    "opentelemetry-semantic-conventions>=0.62b1,<0.63",
    "opentelemetry-instrumentation-fastapi>=0.62b1,<0.63",
    "opentelemetry-instrumentation-asyncpg>=0.62b1,<0.63",
    "opentelemetry-exporter-otlp-proto-http>=1.41,<2",
    "jsonschema-rs>=0.20,<1",
    # Anthropic SDK: used by `AnthropicLLM`, the production implementor of
    # `cora.infrastructure.ports.LLM`. No other code imports this;
    # subscribers + tests use the port + `FakeLLM`. Pin <1 to flag a future
    # major SDK shift in CI
    # before it lands silently.
    "anthropic>=0.109.1,<1",
    # cryptography: explicit top-level floor pin. Previously pulled
    # transitively at 48.x via pyjwt[crypto]. Pinned explicitly to
    # >=46,<47 ahead of the federation wire-tier adapters (python-cwt
    # caps cryptography <47 and sigstore-python caps cryptography <47);
    # landing the downgrade in isolation makes the uv.lock churn
    # reviewable before any new-library import-site appears. 46.x
    # retains the cp313 manylinux + macosx_arm64 wheels and stable
    # RS256 / ES256 / Ed25519 paths that pyjwt and the existing
    # `cora.infrastructure.signing` Ed25519 verify codepath exercise.
    "cryptography>=48.0.1,<49",
    # PyJWT (Phase C Iter A): the one library dependency for the edge-auth
    # JWT path, used by `JwtTokenVerifier` for `Authorization: Bearer <JWT>`
    # signature verification + JWKS rotation. `[crypto]` extra pulls in
    # `cryptography` for RS256/ES256 (every real-world IdP uses one of
    # these). Per the Phase C design lock library-vs-DIY decision: PyJWT
    # is the one library we don't roll ourselves; everything else
    # (introspection adapter, registry, middleware) is hand-written.
    "pyjwt[crypto]>=2.13.0,<3",
    # aioca (Stage-1c of the control-port arc): production asyncio EPICS
    # Channel Access client (libca via ctypes; Diamond Light Source-maintained
    # and production-grade — Diamond's full stack depends on it). Used by
    # `EpicsCaControlPort` at `cora/operation/adapters/`. CA-only (no PVA;
    # Stage-1d's `EpicsPvaControlPort` covers PVA via p4p). Single exception
    # class `CANothing(name, errorcode)` discriminated by ECA code at the
    # adapter ACL.
    "aioca>=1.8,<2",
    # p4p (Stage-1d of the control-port arc): production asyncio EPICS
    # pvAccess client. Built on the pvxs C++ library (EPICS Base official).
    # Used by `EpicsPvaControlPort` at `cora/operation/adapters/`. Carries
    # EPICS V4 Normative Types (NTScalar / NTScalarArray / NTNDArray /
    # NTEnum / NTTable). NTNDArray is the headline: 2-D image streams
    # that CA cannot carry. Error mapping: `asyncio.TimeoutError` (via
    # `wait_for` wrap; p4p methods have no native timeout kwarg) ->
    # ControlTimeoutError; `p4p.client.asyncio.Disconnected` ->
    # ControlNotConnectedError; `RemoteError` -> ControlWriteRejectedError.
    "p4p>=4,<5",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3,<10",
    "pytest-asyncio>=1.4.0,<2",
    "pytest-cov>=7.1.0,<8",
    "coverage[toml]>=7.14.0,<8",
    "diff-cover>=10.3.0,<11",
    "ruff>=0.15.17,<0.16",
    "pyright>=1.1.410,<2",
    "httpx>=0.28.0",
    "asgi-lifespan>=2.1.0,<3",
    "pre-commit>=4.0.0,<5",
    "testcontainers[postgres]>=4.14.2,<5",
    "tach>=0.35.0",
    # pytest-xdist 3.7.0 (2025-05-26) made `--dist=worksteal` atomic and
    # group/scope-aware; 3.8.0 (2025-06-30) added the `loadscope-reorder`
    # toggle. The `worksteal` scheduler is the modern default for mixed-
    # duration suites (50ms unit + 200ms+ integration). One Postgres
    # container per worker (via session-scoped fixture, see tests/conftest)
    # sidesteps testcontainers-python#567 contention.
    "pytest-xdist>=3.8.0,<4",
    # pytest-httpserver (Phase C Iter A): spins up an in-process Werkzeug
    # HTTP server per-test; used to serve fake JWKS endpoints + IdP
    # introspection endpoints in `tests/unit/test_jwt_verifier.py` and
    # `tests/unit/test_introspection_verifier.py`. Why a real HTTP server
    # (not a httpx mock): PyJWKClient under the hood does its own HTTP
    # fetch; exercising the full path catches more (kid-miss refetch,
    # connection handling, etc) than mock-the-network. ~150ms startup
    # cost per test class; acceptable for the ~30 Iter A unit tests.
    "pytest-httpserver>=1.1.0,<2",
    # Per-test timeout enforcement. Without this, a single hung test
    # (e.g. an asyncpg call waiting on a connection that's never
    # returned, a deadlocked container, an unawaited future) stalls the
    # entire xdist session indefinitely — workers report nothing back
    # and the controller waits forever. `thread` method dumps a
    # traceback from the hung test before killing it, so the failure
    # output points to the line responsible.
    "pytest-timeout>=2.4.0,<3",
    # Hypothesis: property-based testing (Iter C of testing-techniques rollout).
    # Used for value-object invariants today; planned to extend to per-command
    # deciders in Iter D (PBT on Access BC). A `ci` profile is registered in
    # tests/conftest.py and auto-activates on CI=true to derandomize the seed
    # and disable the local example database, sidestepping xdist seed
    # collisions across worker processes.
    "hypothesis>=6.155.2,<7",
    # hypothesis-jsonschema: Hypothesis strategy builder driven by JSON
    # Schema documents. Used by `tests/contract/test_mcp_tools_fuzz.py`
    # (Iter H of the testing-techniques rollout) to generate
    # schema-conforming inputs against MCP tools' `inputSchema`. Library
    # is in maintenance mode (0.23.1 = Feb 2024), supports Draft 04/06/07.
    # CORA's MCP schemas come from Pydantic `Annotated[Type, Field(...)]`
    # which stays Draft-07-compatible; the fuzz harness strips the
    # `$schema` field before invoking `from_schema` to dodge the Draft
    # 2020-12 declaration FastMCP emits.
    "hypothesis-jsonschema>=0.23,<1",
    # jsonschema: stdlib-style Draft 07 validator used by the MCP fuzz
    # harness to round-trip success responses through each tool's
    # declared `outputSchema`. `jsonschema-rs` (already pinned above) is
    # the runtime validator for `parameters_schema` payloads; we keep
    # them separate because the fuzz harness wants stdlib-Python error
    # ergonomics rather than the Rust-binding throughput.
    "jsonschema>=4.21,<5",
    # caproto (Stage-1b of the control-port arc): asyncio CA client used
    # TEST-ONLY by `CaprotoControlPort` at `cora/operation/adapters/`. The
    # maintainers' own README warns against caproto in production
    # (two-maintainer convenience/iteration tool). Stays in dev because
    # production CA goes through aioca (Stage-1c) and production PVA
    # through p4p (Stage-1d). caproto's IN-PROCESS IOC was abandoned at
    # Stage-1c per [[project_control_port_test_isolation_research]]: the
    # corpus-unanimous pattern is `epicscorelibs.ioc` subprocess for both
    # caproto-client AND aioca-client integration tests.
    "caproto>=1.2,<2",
    # epicscorelibs (Stage-1c of the control-port arc): pip wheel that
    # ships EPICS Base C binaries + Python bindings; `epicscorelibs.ioc`
    # spawns a real softIOC subprocess without requiring a system EPICS
    # Base install. Per [[project_control_port_test_isolation_research]]
    # this is the UNANIMOUS test-isolation pattern across Diamond aioca +
    # ophyd-async + fastcs + caproto's own client tests. Used by the
    # `softioc` integration fixture for both `CaprotoControlPort` AND
    # `EpicsCaControlPort` tests (and future `EpicsPvaControlPort` at
    # Stage-1d). Test-only.
    "epicscorelibs>=7,<8",
    # mutmut: mutation testing for the audit cadence (Iter G of the
    # testing-techniques rollout). Audit-only, not per-PR — per-mutant
    # pytest spawn cost makes per-commit CI intolerable at suite scale.
    # 3.5+ adds type-checker mutant filtering, CI stat export, and async
    # fixes; pinned >=3.5 to dodge earlier async-fixture rough edges.
    # Configuration in `[tool.mutmut]` below scopes mutation to pure
    # decider/evolver modules only.
    "mutmut>=3.6.0,<4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cora"]

[tool.ruff]
line-length = 100
target-version = "py313"
src = ["src", "tests"]
# Parked directories are work-in-progress slices the user explicitly
# shelved (suffix `.parked`); mirrors the same exclusion in [tool.pyright].
extend-exclude = ["**/*.parked"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "W",    # pycodestyle warnings
    "I",    # isort
    "B",    # flake8-bugbear
    "UP",   # pyupgrade
    "RUF",  # ruff-specific
    "SIM",  # flake8-simplify
    "TC",   # flake8-type-checking
    "N",    # pep8-naming
    "ASYNC",
    # Documentation guardrails (see docs/reference/conventions.md#documentation).
    # Selective subset of pydocstyle — broader D-rules (D205, D209, D213) would
    # require ~3,000+ retroactive rewrites against an established convention.
    # D401 (imperative mood) is heuristic and conflicts with the "True iff X"
    # predicate idiom. D1xx (require docstring presence) is left to reviewer
    # judgment; the codebase runs at ~100% module / ~74% class docstrings
    # already without enforcement.
    "D200",     # one-line docstring fits on one line
    "D201",     # no blank lines before docstring
    "D202",     # no blank lines after function docstring
    "D210",     # no whitespace surrounding docstring text
    "D211",     # no blank lines before class docstring
    "D212",     # multi-line summary on the first line (vs D213)
    "D300",     # triple double quotes
    "D403",     # first word capitalized
    "D404",     # first word not "This"
    "D415",     # first line ends with .  ?  or !
    # TODO hygiene — `git log` + PR description carry context, not source.
    "TD002",    # require TODO author
    "TD003",    # require TODO issue link
]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint.isort]
# `tests` is a first-party namespace too — without this, ruff groups
# `from tests.contract._mcp_helpers import ...` with third-party libs
# rather than with `from cora.* import ...`.
known-first-party = ["cora", "tests"]

[tool.pyright]
include = ["src", "tests"]
# Parked directories are work-in-progress slices the user explicitly
# shelved (suffix `.parked`); they shouldn't block type-check on the
# active codebase. Same convention applies to ruff (below).
exclude = ["**/__pycache__", "**/*.parked"]
pythonVersion = "3.13"
typeCheckingMode = "strict"
useLibraryCodeForTypes = true
reportMissingTypeStubs = false

[tool.pytest.ini_options]
addopts = ["--import-mode=importlib", "--strict-markers"]
testpaths = ["tests"]
asyncio_mode = "auto"
# Hard upper bound per test. Most unit/architecture tests are <100ms;
# integration tests with testcontainers stay well under 30s because the
# Postgres container is session-scoped (one per xdist worker), so per-
# test cost is just a transaction + a few queries. 60s is a generous
# safety net that still catches genuine hangs in minutes rather than
# the 50+ minutes we saw with no timeout. Use `@pytest.mark.timeout(N)`
# to override for known-slow tests (none today).
#
# `thread` method spawns a watchdog thread that dumps tracebacks of
# all threads in the worker process before raising — survives asyncio
# event loops, doesn't rely on SIGALRM (which signal-based timeouts
# need and which interacts poorly with asyncpg + uvloop). Works per-
# worker under xdist.
timeout = 60
timeout_method = "thread"
markers = [
    "unit: pure tests with no I/O",
    "architecture: structural fitness functions (AST/filesystem/SQL-text checks); no I/O",
    "integration: tests requiring Postgres or other external services",
    "contract: REST/MCP schema verification tests",
    "e2e: full end-to-end tests",
]

# Coverage configuration. Default trace core (NOT sys.monitoring): on
# Python 3.13 coverage.py silently falls back to ctrace when branch
# coverage or mixed thread/greenlet concurrency is on (both apply here);
# coveragepy#2172 (2026-05) reports sysmon is also slower than ctrace on
# 3.14 in real suites. Revisit only after CORA moves to 3.14 AND
# coveragepy#2150 lands sysmon+branch support. `parallel = true`
# required for pytest-xdist: each worker writes a suffixed `.coverage.*`
# file that pytest-cov combines at session end.
[tool.coverage.run]
branch = true
parallel = true
source = ["src/cora"]
# Required by py-cov-action/python-coverage-comment-action: the action
# runs from repo root while pytest runs from apps/api, so absolute paths
# in .coverage become unresolvable. Relative paths also make .coverage
# files portable across the dev/CI/container split.
relative_files = true
omit = [
    "*/tests/*",
    "*/conftest.py",
    "*/__main__.py",
]

[tool.coverage.report]
show_missing = true
skip_covered = false
precision = 1
# `exclude_also` preserves the default `pragma: no cover` plus these
# AST-shape-level exclusions. `exclude_lines` would replace the defaults.
exclude_also = [
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "@(abc\\.)?abstractmethod",
    "\\.\\.\\.",
    "if __name__ == .__main__.:",
]
# Soft floor; ratchet up over time. Diff coverage (changed lines only)
# is the hard gate via diff-cover in CI; total coverage is informational.
fail_under = 80

[tool.coverage.html]
directory = "htmlcov"

[tool.coverage.xml]
output = "coverage.xml"

# Mutation testing — audit cadence (Iter G of testing-techniques rollout).
#
# Scope: pure decider + evolver modules in Access BC ONLY. Mutation testing
# of integration-tier code (handlers that touch the EventStore adapter, route
# code, etc.) is intractable: per-mutant pytest spawn × per-test Postgres
# container spin-up = days per audit. The unit-tier Access BC tests run in
# ~2s, so per-mutant cost stays in the seconds range.
#
# Rolling to more BCs: add their decider/evolver paths to `source_paths` and
# extend `pytest_add_cli_args_test_selection`. Per-BC audits stay parallel-
# safe because each runs against its own scoped test subset.
#
# DO NOT add this to per-PR CI. mutmut runs hundreds-to-thousands of mutants
# end-to-end; even at ~1s/mutant on unit tests, a full audit is 5-15 min.
# Run via `make mutmut-audit` on-demand or nightly, NOT every commit.
#
# Why `-p no:xdist` in the pytest args: mutmut runs its own subprocess
# parallelism (one Python process per mutant); stacking xdist on top
# oversubscribes the host and brings no speedup on a per-mutant <2s suite.
[tool.mutmut]
# `source_paths` tells mutmut where source CODE lives (the AST-mutated tree
# is copied under `apps/api/mutants/`). The actual MUTATION scope is narrowed
# at invocation time via the CLI wildcard pattern (see Makefile target
# `mutmut-audit`); without that, every Python file under `source_paths`
# would be mutated (~37k mutants at the apps/api scope, hours of compute).
#
# The `only_mutate` config key looked like the right filter from the README
# but did not actually limit scope in mutmut 3.5 — the CLI wildcard
# (`mutmut run "cora.access.*"`) is the working escape hatch.
source_paths = [ "src/" ]
# README.md needs to be present in the `mutants/` working tree so hatchling
# can validate package metadata when pytest's subprocess runs. mutmut 3.5's
# `also_copy = ["README.md"]` did not copy the file as documented; the
# Makefile target `mutmut-audit` seeds it explicitly as a post-step.
pytest_add_cli_args_test_selection = [
    "tests/unit/access",
]
pytest_add_cli_args = [
    "-x",
    "-q",
    "-p",
    "no:xdist",
    "-p",
    "no:tach",
]
# `mutate_only_covered_lines = true` requires a pre-generated coverage.py
# report; mutmut doesn't seed it itself. Left false here because the
# scoped source_paths (3 small pure files) are fully covered by the unit
# tests already — coverage filtering would prune nothing meaningful at
# this scope. Flip to true if source_paths expands to include code paths
# whose coverage is sparse.
mutate_only_covered_lines = false
